# AIAAIC_cleaning

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  scrape.py
.claude/: settings.local.json
data/: errors.jsonl
src/: __init__.py  console.py  csv_parser.py  models.py  page_scraper.py  scraper.py  utils.py
